# Iniciacao_cientifica

./: install_libs.sh
PixTrigger/: pixtrigger.sh
PixTrigger/src/apps/: CMakeLists.txt  main.cpp
